<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@drawable/login2_background">

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="54dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="45sp"
        android:textStyle="bold|italic" />

    <!-- Name Input -->

    <EditText
        android:id="@+id/etFirstNameSignUp"
        android:hint="@string/hint_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/etLastNameSignUp"
        android:hint="@string/hint_last"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_marginBottom="18dp"/>

    <EditText
        android:id="@+id/etEmailSignUp"
        android:hint="@string/hint_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/etPasswordSignUp"
        android:hint="@string/hint_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_marginBottom="17dp"/>

    <EditText
        android:id="@+id/etConfirmPasswordSignUp"
        android:hint="@string/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_edittext"
        android:textColor="#000000"
        android:textColorHint="#666666"
        android:layout_marginBottom="16dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnBackLogin"
            android:layout_width="132dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_back_to_login"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="132dp"
            android:layout_height="60dp"
            android:layout_marginStart="12dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_signup"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
